test/sema/generic-constraint-unknown-type.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:11: error: unknown type 'Foo'
void f<T: Foo>() {}
